src/objects/CaseProduct__c.object
<CustomObject>
    <fields>
        <fullName>Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Produtos do Caso</relationshipLabel>
        <relationshipName>ProdutosCaso</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Produto__r.LuizaCode__c</formula>
        <label>Código do produto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>Produto__r.Description</formula>
        <label>Descrição do produto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Produto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Produtos do Caso</relationshipLabel>
        <relationshipName>ProdutosCaso</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Produto do Caso</label>
    <nameField>
        <label>Produto do Caso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos do Caso</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>